force-app/main/default/objects/Batch_Job_Size__c/Batch_Job_Size__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Batch Job Size</label>
</CustomObject>