force-app/main/default/objects/Batch_Job_Size__c/fields/ApplicationAmortizationScheduleDeletion__c.field-meta.xml
<CustomField>
    <fullName>ApplicationAmortizationScheduleDeletion__c</fullName>
    <label>ApplicationAmortizationScheduleDeletion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>