force-app/main/default/objects/Batch_Job_Size__c/fields/ChecklistDeletionBatch_Job_Size__c.field-meta.xml
<CustomField>
    <fullName>ChecklistDeletionBatch_Job_Size__c</fullName>
    <label>ChecklistDeletionBatch Job Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>