force-app/main/default/objects/Batch_Job_Size__c/fields/ChecklistDetailDeletionBatch_Job_Size__c.field-meta.xml
<CustomField>
    <fullName>ChecklistDetailDeletionBatch_Job_Size__c</fullName>
    <label>ChecklistDetailDeletionBatch Job Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>