force-app/main/default/objects/Batch_Job_Size__c/fields/ContentDocumentLinkVisibility_Size__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentLinkVisibility_Size__c</fullName>
    <label>ContentDocumentLinkVisibility_Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>