force-app/main/default/objects/Batch_Job_Size__c/fields/LastDueDateUpdateBatch__c.field-meta.xml
<CustomField>
    <fullName>LastDueDateUpdateBatch__c</fullName>
    <label>LastDueDateUpdateBatch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>