force-app/main/default/objects/Batch_Job_Size__c/fields/LoanRepaymentScheduleDeletionBatch__c.field-meta.xml
<CustomField>
    <fullName>LoanRepaymentScheduleDeletionBatch__c</fullName>
    <label>LoanRepaymentScheduleDeletionBatch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>