force-app/main/default/objects/Batch_Job_Size__c/fields/LTSChargeUpdateBatch__c.field-meta.xml
<CustomField>
    <fullName>LTSChargeUpdateBatch__c</fullName>
    <label>LTSChargeUpdateBatch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>