force-app/main/default/objects/Batch_Job_Size__c/fields/StatementBulkGenerationLoanUpdateBatch__c.field-meta.xml
<CustomField>
    <fullName>StatementBulkGenerationLoanUpdateBatch__c</fullName>
    <label>StatementBulkGenerationLoanUpdateBatch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>