force-app/main/default/objects/Batch_Job_Size__c/fields/UpdateFirstSecondPmntDateBatch__c.field-meta.xml
<CustomField>
    <fullName>UpdateFirstSecondPmntDateBatch__c</fullName>
    <label>UpdateFirstSecondPmntDateBatch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>